Updated api for seasons endpoint, added to api doc
