# pages/api/v1/leagues/seasons.ts
@@ -30,23 +30,27 @@ export default async (
 	SeasonID: number;
   }> = await query(SQL`
     SELECT DISTINCT schedules.SeasonID, league_data.LeagueID, league_data.Name, league_data.Abbr
-	FROM schedules
-	INNER JOIN league_data
-	ON league_data.LeagueID = schedules.LeagueID
-	ORDER BY league_data.LeagueID ASC, schedules.SeasonID ASC`
-      .append (league != null ? SQL`
-      WHERE league_data.LeagueID=${+league};
-      `
-      : ''
+    FROM schedules
+    INNER JOIN league_data
+    ON league_data.LeagueID = schedules.LeagueID
+	`
+      .append (
+        league != null ? SQL`
+        WHERE league_data.LeagueID=${+league}
+        `
+        : ''
+      )
+      .append (
+        SQL`ORDER BY league_data.LeagueID ASC, schedules.SeasonID ASC`
       )
 	);
-
+	
   const parsed = seasons.map((season) => ({
     id: season.LeagueID,
     name: season.Name,
     abbreviation: season.Abbr,
 	season: season.SeasonID,
   }));
-
+  
   res.status(200).json(parsed);
 };
