# public/swagger.yaml
@@ -47,6 +47,27 @@ paths:
             type: array
             items:
               $ref: '#/definitions/League'
+  /leagues/seasons:
+    get:
+      tags:
+        - leagues
+      summary: List of Seasons in the Index by League
+      description: 'A listing of all seasons in the index by league.'
+      operationId: getSeasons
+      produces:
+        - application/json
+      parameters:
+        - name: league
+          in: query
+          type: number
+          default: null
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Seasons'
   /conferences:
     get:
       tags:
@@ -500,6 +521,20 @@ definitions:
       abbreviation:
         type: string
         example: SHL
+  Seasons:
+    type: object
+    properties:
+      id:
+        type: number
+      name:
+        type: string
+        example: Simulation Hockey League
+      abbreviation:
+        type: string
+        example: SHL
+      season:
+        type: number
+        example: 58
   Conference:
     type: object
     properties:
